# wagtail-starter-kit

./: .dockerignore  .env.prod  .gitignore  .pre-commit-config.yaml  BRIEF.md  CHANGELOG.md  Dockerfile  Makefile  README.md  mise.toml  pyproject.toml
.github/workflows/: release-please.yml
apps/blocks/: apps.py  models.py
apps/core/: models.py
apps/forms/: models.py  urls.py  views.py
apps/frontend/: apps.py
apps/home/: models.py
apps/navigation/: admin.py  apps.py  models.py  wagtail_hooks.py
apps/pages/: models.py
apps/search/: models.py  views.py
apps/seo/: models.py
apps/settings/: models.py
apps/snippets/: models.py
config/: asgi.py  routers.py  settings.py  storage.py  urls.py
dev/: Dockerfile  docker-compose.dev.yml  init.sh  litestream.yml  supervisord.conf
frontend/: package.json  vite.config.mjs
prod/: Dockerfile  init.sh  litestream.yml  supervisord.conf
templates/: base.html
templates/blocks/: button_block.html  card_block.html  cta_block.html  cta_snippet_block.html  embed_block.html  faq_block.html  heading_block.html  hero_block.html  image_block.html  marquee_block.html  quote_block.html  rich_text_block.html  side_by_side_hero_block.html  simple_hero_block.html  slider_block.html  table_block.html  team_member_block.html  testimonial_block.html  three_column_block.html  two_column_block.html  video_hero_block.html
templates/forms/: form.html
templates/includes/: footer.html  header.html  navigation.html
templates/navigation/: menu.html  menu_item.html  mobile_menu_item.html
templates/pages/: entity_base.html  flex_page.html  form_page.html  form_page_landing.html  home_page.html  portfolio_item_page.html  portfolio_showcase_page.html  project_page.html  resource_page.html  (+6 more)
(+42 files in other folders)
